# fullstack

./: Cargo.toml
backend/: .env  Cargo.toml
backend/src/: main.rs
common/src/: lib.rs
frontend/: .gitignore  Cargo.toml  README.md  package.json  tailwind.css
frontend-leptos/: Cargo.toml  Trunk.toml  index.html
frontend-leptos/assets/: tailwind.css
frontend-leptos/src/: main.rs
frontend/assets/: tailwind.css
frontend/src/: main.rs
