[package]
name = "frontend"
version = "0.1.0"
authors = ["蒜鸟蒜鸟 <luogan618@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { version = "0.1.0", path = "../common" }
dioxus = { version = "0.6.0", features = [] }
reqwest = { version = "0.12.22", features = ["json"] }
serde_json = "1.0.140"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
